@@ -496,6 +496,7 @@ exit 0
 * Fri Nov 19 2004 Jeff Johnson <jbj@jbj.org> 4.4-0.4
 - remove noNeon runtime switch, http through neon only.
 - remove http put to be able to build against upstream neon.
+- bump soname into libfoo-4.4.so everywhere.
 
 * Thu Nov 11 2004 Jeff Johnson <jbj@jbj.org> 4.4-0.3
 - neon used by default for http/https transport.
