@@ -33,6 +33,7 @@
 	- upgrade to db-4.3.21 final internal.
 	- remove noNeon runtime switch, http through neon only.
 	- remove http put to be able to build against upstream neon.
+	- bump soname into libfoo-4.4.so everywhere.
 
 4.3.2 -> 4.3.3:
 	- bump micro version.
